--- a/configuracao_central.json
+++ b/configuracao_central.json
@@ -1,4 +1,6 @@
 {
     "ip_servidor_central": "localhost",
-    "porta_servidor_central": 5000
+    "porta_servidor_central": 10711,
+    "ip_servidor_web": "localhost",
+    "porta_servidor_web": 10720
 }
