--- a/configuracao_sala_03.json
+++ b/configuracao_sala_03.json
@@ -1,71 +1,69 @@
 {
     "nome": "Sala 03",
-    "ip_servidor_distribuido": "localhost",
-    "porta_servidor_distribuido": 7777,
     "outputs": [
         {
-            "type": "lampada",
+            "name": "lamp01",
             "tag": "Lâmpada 01",
-            "gpio": 26
+            "gpio": 18
         },
         {
-            "type": "lampada",
+            "name": "lamp02",
             "tag": "Lâmpada 02",
-            "gpio": 19
+            "gpio": 23
         },
         {
-            "type": "projetor",
+            "name": "projector",
             "tag": "Projetor Multimidia",
-            "gpio": 6
+            "gpio": 25
         },
         {
-            "type": "ar-condicionado",
+            "name": "air_conditioning",
             "tag": "Ar-Condicionado (1º Andar)",
-            "gpio": 13
+            "gpio": 24
         },
         {
-            "type": "alarme",
+            "name": "alarm",
             "tag": "Sirene do Alarme",
-            "gpio": 5
+            "gpio": 8
         }
     ],
     "inputs": [
         {
-          "type": "presenca",
+          "name": "presence",
           "tag": "Sensor de Presença",
-          "gpio": 0
+          "gpio": 7
         },
         {
-            "type": "fumaca",
+            "name": "smoke",
             "tag": "Sensor de Fumaça",
-            "gpio": 11
+            "gpio": 1
         },
         {
-            "type": "janela",
+            "name": "window",
             "tag": "Sensor de Janela",
-            "gpio": 9
+            "gpio": 12
         },
         {
-            "type": "porta",
+            "name": "door",
             "tag": "Sensor de Porta",
-            "gpio": 10
+            "gpio": 16
         },
         {
-            "type": "contagem",
+            "name": "contagem",
             "tag": "Sensor de Contagem de Pessoas Entrada",
-            "gpio": 22
+            "gpio": 20
         },
         {
-            "type": "contagem",
+            "name": "contagem",
             "tag": "Sensor de Contagem de Pessoas Saída",
-            "gpio": 27
+            "gpio": 21
         }
     ],
-    "sensor_temperatura":[
+    "temperature":[
         {
-          "type": "dth22",
+          "name": "dth22",
           "tag": "Sensor de Temperatura e Umidade",
-          "gpio": 18
+          "gpio": 4
         }
     ]
 }
